--- a/module-3/main/css/styles.css
+++ b/module-3/main/css/styles.css
@@ -1,8 +1,8 @@
 body {
-  background: rgb(0, 193, 255);
+  background: rgb(0, 193, 255) url("img/ДОБАВИТЬ") no-repeat;
 }
 
-h1, h2, h3 {
+h1, h2, h3, ul p {
   color: rgb(38, 53, 85);
 }
 
@@ -10,9 +10,20 @@ p {
   color: rgb(0, 0, 0);
 }
 
-.page {
-  width: 800px;
+ul p {
+  font-size: 16px;
+}
+
+ul {
+  list-style: none;
+  vertical-align: top;
+  display: inline-block;
+}
+
+.wrapper {
+  width: 480px;
   height: auto;
-  background: #fff000;
+  background: rgb(255, 255, 255);
   padding: 20px;
+  margin: auto;
 }
