--- a/module-3/main/css/styles.css
+++ b/module-3/main/css/styles.css
@@ -1,29 +1,52 @@
 body {
-  background: rgb(0, 193, 255) url("img/ДОБАВИТЬ") no-repeat;
+  padding: 0;
+  margin: 40px 0;
+  font-size: 14px;
+  font-family: "Arial";
+  background: rgb(153, 230, 255) url("../img/back.jpg") 50% 50% no-repeat;
 }
 
 h1, h2, h3, ul p {
   color: rgb(38, 53, 85);
 }
 
-p {
-  color: rgb(0, 0, 0);
+h1, h2 {
+  font-size: 25px;
+  font-family: "RGO";
 }
 
-ul p {
-  font-size: 16px;
+h3 {
+  font-size: 15px;
+}
+
+p {
+  color: rgb(78, 80, 80);
 }
 
 ul {
+  padding: 10px;
   list-style: none;
   vertical-align: top;
   display: inline-block;
 }
 
+hr {
+  margin: 40px 0;
+}
+
 .wrapper {
   width: 480px;
   height: auto;
-  background: rgb(255, 255, 255);
-  padding: 20px;
   margin: auto;
+  padding: 36px;
+  box-sizing: border-box;
+  background: rgb(255, 255, 255);
+}
+
+@font-face {
+  font-family: "RGO";
+  font-style: normal;
+  font-weight: 400;
+  src: local(PathwayGothicOne-Regular),
+  url("../fonts/PathwayGothicOne-Regular.ttf");
 }
