--- a/module-4/main/css/styles.css
+++ b/module-4/main/css/styles.css
@@ -1,9 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-size: 15px;
   font-family: Arial, sans-serif;
-  background: rgb(153, 230, 255) url("../img/back.jpg") 50% 50% no-repeat;
+  background: #aad9ef url("../img/back.jpg") 50% 50% no-repeat;
 }
 
 .wrapper {
@@ -11,62 +10,130 @@ body {
   margin: 40px auto;
   padding: 80px 60px 60px;
   box-sizing: border-box;
-  background: rgb(255, 255, 255);
+  vertical-align: top;
+  background: #fff;
   line-height: 18px;
   font-size: 0;
 }
 
 .part-one div,
 .part-two div {
-  font-size: 14px;
-  vertical-align: top;
+  font-size: 15px;
   display: inline-block;
 }
 
 .part-one div:first-child,
 .part-two div:first-child {
-  width: 75%;
+  width: 72%;
 }
 
 .part-one div:last-child,
 .part-two div:last-child {
-  width: 25%;
+  width: 28%;
+  padding-left: 25px;
+  vertical-align: top;
+  box-sizing: border-box;
 }
 
 .part-one::after {
   content: "";
   display: block;
   margin: 40px auto;
-  border: 1px solid rgb(222 , 219, 219);
+  border: 1px solid #dedbdb;
 }
 
+/* text decoration */
 h1, h2, h3, ul p  {
-  font-weight: bold;
-  color: rgb(38, 53, 85);
+  color: #263555;
 }
 
 h1, h2 {
   font-size: 30px;
-  font-weight: bold;
+  margin-top: 20px;
   margin-bottom: 40px;
   font-family: "Pathway Gothic One", sans-serif;
 }
 
-p {
-  color: rgb(78, 80, 80);
+h3 {
+  font-size: 17px;
+  font-weight: 400;
 }
 
+p {
+  color: #4e5050;
+}
+
+.align {
+  text-align: center;
+}
+
+.part-two div:first-child h2 {
+  margin-bottom: 70px;
+}
+
+/* quote */
+.quote {
+  padding: 20px;
+  margin-bottom: 60px;
+  position: relative;
+  border-radius: 2px;
+  background: #fcfafa;
+  border: 1px solid #dfdcdc;
+}
+
+.quote::before, .quote::after {
+  content: "";
+  left: 95px;
+  bottom: -50px;
+  position: absolute;
+  border: 20px solid transparent;
+  border-top: 30px solid #dfdcdc;
+}
+
+.quote::after {
+  border-top: 30px solid #fcfafa;
+  bottom: -49px;
+}
+
+/* lists */
 .part-two ul {
-  font-size: 16px;
-  list-style: none;
+  font-size: 15px;
   line-height: 20px;
   vertical-align: top;
   display: inline-block;
+  list-style-image: url("../img/strelka.png");
+}
+
+.part-one ol {
+  list-style: none;
+  position: relative;
+}
+
+.part-one li::before {
+  content: "1";
+  width: 26px;
+  height: 26px;
+  left: 6px;
+  color: #fff;
+  line-height: 26px;
+  text-align: center;
+  position: absolute;
+  border-radius: 50%;
+  background: #38afe5;
+  border: 1px solid #3c97c2;
+}
+
+.part-one li:nth-child(2)::before {
+  content: "2";
+}
+
+.part-one li:nth-child(3)::before {
+  content: "3";
 }
 
 /* image */
 img {
   float: left;
   width: 360px;
-  margin: 10px 25px 25px 0;
+  margin: 0 20px 20px 0;
 }
