--- a/module-5/main and additional/css/styles.css
+++ b/module-5/main and additional/css/styles.css
@@ -9,7 +9,6 @@ body {
   width: 1024px;
   margin: 0 auto 40px;
   padding: 0;
-  box-sizing: border-box;
 }
 
 /* HEADER */
@@ -48,8 +47,6 @@ header {
   text-decoration: none;
 }
 
-
-
 /* MAIN */
 main {
   padding: 60px 60px 100px;
@@ -64,19 +61,18 @@ main > img {
 main h2 {
   color: #263555;
   font-size: 28px;
-  padding: 40px 0;
+  padding: 20px 0;
   font-weight: 400;
 }
 
 main h3 {
-  color: #fff;
-  padding: 15px;
+  padding: 14px;
   font-weight: 400;
   position: absolute;
 }
 
 .first-thesis {
-  top: 260px;
+  top: 200px;
   color: #263555;
   font-size: 22px;
   background: #fff;
@@ -84,37 +80,62 @@ main h3 {
 }
 
 .second-thesis {
-  top: 309px;
+  top: 247px;
   color: #fff;
   font-size: 28px;
   letter-spacing: 1px;
   background: #38afe5;
 }
 
+main .relative {
+  position: relative;
+}
+
 /* IMAGE AREA */
 .image-area {
-  display: inline-block;
+  display: flex;
+  justify-content: space-between;
 }
 
 .image-area img,
 .image-area div {
   width: 288px;
-  display: inline-block;
-}
-
-.image-area div:nth-child(1),
-.image-area div:nth-child(2) {
-  padding-right: 16px;
 }
 
 /* BUTTON TO TOP */
 
 /* SWITCH SLIDE */
 .switch {
-  width: 120px;
-  height: 120px;
-  background: red;
-  border-radius: 50%;
+  left: 30px;
+  bottom: 40px;
+  font-size: 0;
+  position: absolute;
+}
+
+.switch a {
+  width: 40px;
+  height: 80px;
+  color: #fff;
+  font-size: 20px;
+  line-height: 80px;
+  text-align: center;
+  background: #38afe5;
+  display: inline-block;
+  text-decoration: none;
+}
+
+.switch a:first-child {
+  border-radius: 40px 0 0 40px;
+}
+
+.switch a:last-child {
+  border-radius: 0 40px 40px 0;
+}
+
+.switch a:hover {
+  opacity: 0.9;
+  /*border: 1px solid #263555;*/
+  /*box-sizing: border-box;*/
 }
 
 /* SUBMENU AND HOVER */
