--- a/module-6/About_1024/css/styles.css
+++ b/module-6/About_1024/css/styles.css
@@ -9,6 +9,11 @@ body {
   width: 1024px;
   margin: 0 auto 40px;
   padding: 0;
+  box-sizing: border-box;
+}
+
+.wrapper a {
+  text-decoration: none;
 }
 
 /* HEADER */
@@ -28,14 +33,14 @@ header {
 }
 
 .menu h1 {
-  width: 140px;
-  height: 140px;
+  width: 144px;
+  height: 144px;
   color: #263555;
   font-size: 62px;
   font-weight: 400;
   background: #fff;
   text-align: center;
-  line-height: 140px;
+  line-height: 144px;
   border-radius: 50%;
   font-family: "Dorsa", sans-serif;
 }
@@ -44,10 +49,9 @@ header {
   color: #fff;
   font-size: 28px;
   font-weight: 400;
-  text-decoration: none;
 }
 
-/* HEADER HOVER */
+/* HEADER hover */
 .menu-item:hover > a {
   color: #263555;
   line-height: 40px;
@@ -80,7 +84,6 @@ li.submenu  {
 li.submenu a {
   color: #6b7488;
   font-size: 23px;
-  text-decoration: none;
 }
 
 li.submenu:hover a {
@@ -95,4 +98,137 @@ ul.submenu::before {
   border-style: solid;
   border-width: 0 4px 6px 4px;
   border-color: transparent transparent #fff transparent;
+}
+
+/* MAIN */
+main {
+  padding: 60px 40px;
+  background: #fff;
+}
+
+main > div {
+  display: flex;
+}
+
+main .aside {
+  min-width: 220px;
+  max-width: 220px;
+  padding-left: 40px;
+}
+
+main img {
+  float: left;
+  margin: 0 15px 10px 0;
+}
+
+main > div:first-child {
+  margin-bottom: 40px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #dedbdb;
+}
+
+/* MAIN text-decoration*/
+main h2, main h3 {
+  color: #263555;
+  font-weight: 400;
+}
+
+main h2 {
+  font-size: 32px;
+  margin-bottom: 40px;
+}
+
+main h3 {
+  font-size: 20px;
+}
+
+main p {
+  font-size: 18px;
+}
+
+main .align {
+  text-align: center;
+}
+
+/* MAIN list::before */
+main .aside ol {
+  list-style: none;
+  position: relative;
+}
+
+main .aside li::before {
+  content: "1";
+  width: 26px;
+  height: 26px;
+  left: 6px;
+  color: #fff;
+  line-height: 26px;
+  text-align: center;
+  position: absolute;
+  border-radius: 50%;
+  background: #38afe5;
+  border: 1px solid #3c97c2;
+}
+
+main .aside li:nth-child(2)::before {
+  content: "2";
+}
+
+main .aside li:nth-child(3)::before {
+  content: "3";
+}
+
+/* MAIN list-img */
+main ul {
+  font-size: 15px;
+  line-height: 20px;
+  vertical-align: top;
+  display: inline-block;
+  list-style-image: url("../img/arrow.png");
+}
+
+/* MAIN quote */
+.quote {
+  padding: 20px;
+  margin-bottom: 60px;
+  position: relative;
+  border-radius: 2px;
+  background: #fcfafa;
+  border: 1px solid #dfdcdc;
+}
+
+.quote::before, .quote::after {
+  content: "";
+  left: 95px;
+  bottom: -50px;
+  position: absolute;
+  border: 20px solid transparent;
+  border-top: 30px solid #dfdcdc;
+}
+
+.quote::after {
+  bottom: -49px;
+  border-top: 30px solid #fcfafa;
+}
+
+/* FOOTER */
+footer > div {
+  display: flex;
+  height: 100px;
+  padding: 20px 80px;
+  align-items: center;
+  justify-content: space-around;
+}
+
+footer > div > div {
+}
+
+footer div:first-child {
+  background: #30455b;
+}
+
+footer div:first-child a,
+footer div:first-child p {
+  color: #e3e6e9;
+  font-family: "Open Sans Condensed";
 }
