--- a/module-6/About_1024/css/styles.css
+++ b/module-6/About_1024/css/styles.css
@@ -235,6 +235,8 @@ footer > div:first-child {
 
 footer > div:last-child {
   padding: 20px;
+  flex-direction: row;
+  justify-content: center;
 }
 
 footer > div:last-child a {
@@ -265,3 +267,7 @@ footer div:first-child p {
   color: #e3e6e9;
   font-family: "Open Sans Condensed", sans-serif;
 }
+/*
+footer > div:last-child p {
+  flex-wrap: wrap;
+}*/
