--- a/module-7/Contacts_1024/css/styles.css
+++ b/module-7/Contacts_1024/css/styles.css
@@ -105,7 +105,6 @@ main {
   padding: 70px 50px;
   background: #fff;
   display: flex;
-  /*justify-content: space-between;*/
 }
 
 main h2 {
@@ -131,5 +130,64 @@ main div.aside {
 }
 
 main iframe{
-  width: 70%;
+  width: 380px;
+  height: 380px;
+}
+
+/* FOOTER */
+footer > div {
+  height: 120px;
+  box-sizing: border-box;
+  /*  */
+  border: 1px solid red;
+}
+
+footer > div:first-child {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  background: #30455b;
+}
+
+footer > div:first-child a {
+  color: #f1f3f4;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Open Sans Condensrd", sans-serif;
+}
+
+/* color: #f1f3f4; */
+
+
+
+
+
+
+
+footer div.social a {
+  width: 40px;
+  height: 40px;
+  margin: 10px 5px;
+  border-radius: 50%;
+}
+
+footer .twitter {
+  background: #fff url("../img/sprits-social.png") -40px -40px no-repeat;
+}
+
+footer .facebook {
+  background: #fff url("../img/sprits-social.png") -0px -0px no-repeat;
+}
+
+footer .google-plus {
+  background: #fff url("../img/sprits-social.png") -40px -0px no-repeat;
+}
+
+footer .instagram {
+  background: #fff url("../img/sprits-social.png") -0px -40px no-repeat;
+}
+
+/* FOOTER hover */
+footer a[target="_blank"]:hover {
+  box-shadow: 0 0 12px rgba(0,0,0,0.8);
 }
