--- a/module-6/About_1024/css/styles.css
+++ b/module-6/About_1024/css/styles.css
@@ -227,41 +227,59 @@ main ul {
 }
 
 /* FOOTER */
-footer > div {
-  display: flex;
-  flex-wrap: wrap;
-  height: 100px;
-  box-sizing: border-box;
-}
-
-footer div > p {
-  width: 100%;
-  text-align: center;
-  color: #fff;
-}
-
-footer .contacts {
-  color: #fff;
-}
-
 footer > div:first-child {
-  padding: 20px 40px;
-  background: #30455b;
+  display: flex;
+  padding: 15px 40px 12px;
   align-items: baseline;
   justify-content: space-around;
+  background: #30455b;
 }
 
-footer > div:last-child {
-  padding: 20px;
-  flex-direction: row;
+footer div.nav {
+  display: flex;
+  flex-direction: column;
+}
+
+footer div.nav a {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 4px 0;
+}
+
+footer div.nav p {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  margin: 0 0 4px;
+}
+
+footer div.contacts a {
+  font-size: 15px;
+}
+
+footer div.contacts a:last-child {
+  margin: 0;
+}
+
+footer div.social {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 15px 40px 12px;
   justify-content: center;
 }
 
-footer > div:last-child a {
+footer div.social a {
   width: 40px;
   height: 40px;
   margin: 10px 5px;
   border-radius: 50%;
+}
+
+footer div.social p {
+  width: 100%;
+  color: #fff;
+  text-align: center;
 }
 
 footer .twitter {
@@ -280,13 +298,7 @@ footer .instagram {
   background: #fff url("../img/sprits-social.png") -0px -40px no-repeat;
 }
 
-footer div:first-child a,
-footer div:first-child p {
-  color: #e3e6e9;
-  font-family: "Open Sans Condensed", sans-serif;
-}
-
 /* FOOTER hover */
 footer a[target="_blank"]:hover {
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 12px rgba(0,0,0,0.8);
 }
