--- a/module-7/Contacts_1024/css/styles.css
+++ b/module-7/Contacts_1024/css/styles.css
@@ -113,12 +113,12 @@ main h2 {
   color: #263555;
 }
 
-/*R*/
+/* R*/
 main > div {
   border: 1px solid red;
   box-sizing: border-box;
 }
-/*R*/
+/*R */
 
 main div.main {
   flex-basis: 70%;
@@ -135,40 +135,59 @@ main iframe{
 }
 
 /* FOOTER */
-footer > div {
-  height: 120px;
-  box-sizing: border-box;
-  /*  */
-  border: 1px solid red;
-}
-
 footer > div:first-child {
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  padding: 15px 40px 12px;
+  align-items: baseline;
+  justify-content: space-around;
   background: #30455b;
 }
 
-footer > div:first-child a {
-  color: #f1f3f4;
-  font-size: 14px;
-  font-weight: 400;
-  font-family: "Open Sans Condensrd", sans-serif;
+footer div.nav {
+  display: flex;
+  flex-direction: column;
 }
 
-/* color: #f1f3f4; */
+footer div.nav a {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 4px 0;
+}
 
+footer div.nav p {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  margin: 0 0 4px;
+}
 
+footer div.contacts a {
+  font-size: 15px;
+}
 
+footer div.contacts a:last-child {
+  margin: 0;
+}
 
-
-
+footer div.social {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 15px 40px 12px;
+  justify-content: center;
+}
 
 footer div.social a {
   width: 40px;
   height: 40px;
   margin: 10px 5px;
   border-radius: 50%;
+}
+
+footer div.social p {
+  width: 100%;
+  color: #fff;
+  text-align: center;
 }
 
 footer .twitter {
