--- a/module-6(checked)/Gallery_1024/css/styles.css
+++ b/module-6(checked)/Gallery_1024/css/styles.css
@@ -151,8 +151,8 @@ main a {
 /* FOOTER */
 footer > div:first-child {
   display: flex;
-  padding: 15px 40px 12px;
-  align-items: baseline;
+  padding: 12px 40px 12px;
+  align-items: center;
   justify-content: space-around;
   background: #30455b;
 }
@@ -160,24 +160,25 @@ footer > div:first-child {
 footer div.nav {
   display: flex;
   flex-direction: column;
+  font-family: "Open Sans Condensed", sans-serif;
 }
 
 footer div.nav a {
   color: #fff;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 400;
-  margin: 4px 0;
+  margin: 2px 0;
 }
 
 footer div.nav p {
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
-  margin: 0 0 4px;
+  margin: 0 0 0px;
 }
 
 footer div.contacts a {
-  font-size: 15px;
+  font-size: 14px;
 }
 
 footer div.contacts a:last-child {
