--- a/module-7/Contacts_1024/css/styles.css
+++ b/module-7/Contacts_1024/css/styles.css
@@ -102,43 +102,155 @@ ul.submenu::before {
 
 /* MAIN */
 main {
-  padding: 70px 50px;
-  background: #fff;
   display: flex;
+  justify-content: space-between;
+  background: #fff;
+  padding: 20px 60px 80px;
 }
 
 main h2 {
-  font-size: 28px;
-  font-weight: 400;
   color: #263555;
+  font-size: 26px;
+  font-weight: 400;
+  margin-bottom: 30px;
 }
-
-/* R*/
-main > div {
-  border: 1px solid red;
-  box-sizing: border-box;
-}
-/*R */
 
 main div.main {
-  flex-basis: 70%;
+ flex-basis: 70%;
 }
 
 main div.aside {
-  flex-basis: 30%;
-  padding-left: 40px;
+  flex-basis: 20%;
 }
 
-main iframe{
-  width: 380px;
-  height: 380px;
+main div.main div {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+main iframe {
+  width: 460px;
+  height: 450px;
+}
+
+/* table */
+table {
+  width: 180px;
+  margin: 0 0 0 30px;
+  border-collapse: collapse;
+}
+
+table caption {
+  font-size: 17px;
+  text-align: left;
+  margin-bottom: 8px;
+  margin-left: 3px;
+}
+
+table td {
+  padding: 2px;
+}
+
+table td:first-child {
+  text-align: left;
+}
+
+table td:last-child {
+  text-align: right;
+}
+
+table td:only-child {
+  text-align: left;
+}
+
+table a {
+  color: #000;
+}
+
+table td[colspan="2"] a {
+  color: #fa7e7e;
+}
+
+div.table {
+  height: 310px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+/* ASIDE form */
+div.aside {
+  position: relative;
+}
+
+div.aside > a {
+  right: -42px;
+  bottom: -65px;
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  border-radius: 50%;
+  background: #38afe5 url("../img/arrow-up.png") 50% 50% no-repeat;
+}
+
+form input {
+  width: 190px;
+  height: 18px;
+  margin-bottom: 15px;
+  display: block;
+}
+
+form input[placeholder]::-webkit-input-placeholder {
+  padding: 5px;
+  color: #263555;
+}
+
+form textarea[placeholder]::-webkit-input-placeholder {
+  padding: 5px;
+  font-size: 16px;
+  color: #263555;
+}
+
+form textarea {
+  min-width: 190px;
+  max-width: 190px;
+  min-height: 260px;
+  max-height: 260px;
+  margin-bottom: 15px;
+}
+
+form div {
+  position: relative;
+}
+
+form button {
+  width: 60px;
+  height: 24px;
+  margin-left: 20px;
+  border-radius: 8px;
+  border: 1px solid #A9A9A9;
+  position: absolute;
+}
+
+form button:first-child {
+  right: 90px;
+}
+
+form button:last-child {
+  right: 0px;
+}
+
+form button:hover {
+  width: 64px;
+  height: 25px;
 }
 
 /* FOOTER */
 footer > div:first-child {
   display: flex;
-  padding: 15px 40px 12px;
-  align-items: baseline;
+  padding: 12px 40px 12px;
+  align-items: center;
   justify-content: space-around;
   background: #30455b;
 }
@@ -146,24 +258,25 @@ footer > div:first-child {
 footer div.nav {
   display: flex;
   flex-direction: column;
+  font-family: "Open Sans Condensed", sans-serif;
 }
 
 footer div.nav a {
   color: #fff;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 400;
-  margin: 4px 0;
+  margin: 2px 0;
 }
 
 footer div.nav p {
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
-  margin: 0 0 4px;
+  margin: 0 0 0px;
 }
 
 footer div.contacts a {
-  font-size: 15px;
+  font-size: 14px;
 }
 
 footer div.contacts a:last-child {
