--- a/module-7/Tours_1024/css/styles.css
+++ b/module-7/Tours_1024/css/styles.css
@@ -12,10 +12,6 @@ body {
   box-sizing: border-box;
 }
 
-.wrapper a {
-  text-decoration: none;
-}
-
 /* HEADER */
 header {
   padding: 0 60px 0 40px;
@@ -100,131 +96,19 @@ ul.submenu::before {
   border-color: transparent transparent #fff transparent;
 }
 
-/* MAIN */
-main {
-  padding: 60px 40px;
-  background: #fff;
-}
 
-main > div {
-  display: flex;
-}
 
-main .aside {
-  min-width: 220px;
-  max-width: 220px;
-  padding-left: 40px;
-}
 
-main img {
-  float: left;
-  margin: 0 15px 10px 0;
-}
 
-main > div:first-child {
-  margin-bottom: 40px;
-  padding-bottom: 40px;
-  border-bottom: 1px solid #dedbdb;
-}
 
-main > div:last-child .aside h2 {
-  margin-bottom: 30px;
-}
 
-/* MAIN text-decoration*/
-main h2, main h3 {
-  color: #263555;
-  font-weight: 400;
-}
+/* ? */
 
-main h2 {
-  font-size: 32px;
-  margin-bottom: 40px;
-}
 
-main h3 {
-  font-size: 20px;
-}
 
-main p {
-  font-size: 18px;
-}
 
-main .align {
-  text-align: center;
-}
 
-/* MAIN list::before */
-main .aside ol {
-  list-style: none;
-  position: relative;
-}
 
-main .aside li::before {
-  content: "1";
-  width: 26px;
-  height: 26px;
-  left: 6px;
-  color: #fff;
-  line-height: 26px;
-  text-align: center;
-  position: absolute;
-  border-radius: 50%;
-  background: #38afe5;
-  border: 1px solid #3c97c2;
-}
-
-main .aside li:nth-child(2)::before {
-  content: "2";
-}
-
-main .aside li:nth-child(3)::before {
-  content: "3";
-}
-
-/* MAIN button to top */
-main > a {
-  right: 18.5vw;
-  bottom: 26vh;
-  width: 25px;
-  height: 25px;
-  position: fixed;
-  border-radius: 50%;
-  background: #38afe5 url("../img/arrow-up.png") 50% 50% no-repeat;
-}
-
-/* MAIN list-img */
-main ul {
-  font-size: 15px;
-  line-height: 20px;
-  vertical-align: top;
-  display: inline-block;
-  list-style-image: url("../img/arrow.png");
-}
-
-/* MAIN quote */
-.quote {
-  padding: 20px;
-  margin-bottom: 60px;
-  position: relative;
-  border-radius: 2px;
-  background: #fcfafa;
-  border: 1px solid #dfdcdc;
-}
-
-.quote::before, .quote::after {
-  content: "";
-  left: 90px;
-  bottom: -50px;
-  position: absolute;
-  border: 20px solid transparent;
-  border-top: 30px solid #dfdcdc;
-}
-
-.quote::after {
-  bottom: -49px;
-  border-top: 30px solid #fcfafa;
-}
 
 /* FOOTER */
 footer > div:first-child {
