--- a/module-7/Contacts_1024/css/styles.css
+++ b/module-7/Contacts_1024/css/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Pathway Gothic One", sans-serif;
-  background: #aedbf0 url("../img/background.jpg") 50% 50% no-repeat;
+  background: url("../img/background.jpg") 50% 50% no-repeat;
 }
 
 .wrapper {
@@ -116,7 +116,7 @@ main h2 {
 }
 
 main div.main {
- flex-basis: 70%;
+ flex-basis: 80%;
 }
 
 main div.aside {
