--- a/module-7/Tours_1024/css/tours.css
+++ b/module-7/Tours_1024/css/tours.css
@@ -1,25 +1,22 @@
 body {
-  margin: 0;
-  padding: 0;
   font-family: "Pathway Gothic One", sans-serif;
-  background: #aedbf0 url("../img/background.jpg") 50% 50% no-repeat;
+  background: url("../img/background.jpg") 50% 50% no-repeat;
+  background-size: cover;
 }
 
 .wrapper {
   width: 1024px;
   margin: 0 auto 40px;
-  padding: 0;
   box-sizing: border-box;
 }
 
 /* HEADER */
 header {
-  padding: 0 60px 0 40px;
+  padding: 40px 60px 50px 40px;
 }
 
 .menu {
   display: flex;
-  list-style: none;
   align-items: center;
   justify-content: space-around;
 }
@@ -96,24 +93,153 @@ ul.submenu::before {
   border-color: transparent transparent #fff transparent;
 }
 
+/* MAIN column*/
+main {
+  display: flex;
+  background: #fff;
+  padding: 80px 60px 60px;
+}
 
+main div.main {
+  flex-basis: 76%
+}
 
+main div.aside {
+  flex-basis: 24%;
+}
 
+main h2 {
+  color: #263555;
+  font-size: 28px;
+  font-weight: 400;
+  margin-bottom: 40px;
+}
 
+div.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
 
+div.gallery .gallery-block {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-bottom: 40px;
+}
 
-/* ? */
+div.gallery img {
+  width: 154px;
+  height: 132px;
+}
 
+div.gallery ul {
+  margin: 0 20px;
+}
 
+div.gallery h3 {
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #263555;
+}
 
+div.gallery li:nth-child(even) {
+  margin-bottom: 5px;
+  font-size: 15px;
+}
 
+div.gallery li:nth-child(2n+3) {
+  margin-bottom: 16px;
+  font-size: 19px;
+  color: #3399cc;
+}
 
+div.gallery li:nth-child(5) {
+  margin-bottom: 20px;
+}
 
+div.gallery li:nth-child(6) {
+  margin-bottom: 0;
+}
+
+main button {
+  width: 60px;
+  height: 20px;
+  border-radius: 8px;
+  border: 1px solid #A9A9A9;
+}
+
+main button:hover {
+  border: 1px solid #263555;
+}
+
+/* ASIDE column */
+div.aside {
+  position: relative;
+}
+
+form {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+}
+
+form .description {
+  margin-bottom: 8px;
+  font-size: 15px;
+}
+
+form select {
+  margin-bottom: 2px;
+  min-width: 100%;
+}
+
+form textarea {
+  min-width: 210px;
+  max-width: 210px;
+  min-height: 40px;
+  max-height: 40px;
+  margin-bottom: 20px;
+}
+
+form textarea[placeholder]::-webkit-input-placeholder {
+  padding: 4px;
+}
+
+form button {
+  margin-bottom: 20px;
+}
+
+div.aside h2:last-of-type {
+  margin-bottom: 25px;
+}
+
+form span.caption {
+  color: #3399cc;
+  margin: 6px 0;
+}
+
+.search select {
+  margin-bottom: 24px;
+}
+
+.search select[name="duration"] {
+  margin-bottom: 2px;
+}
+
+div.aside > a {
+  right: -42px;
+  bottom: -45px;
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  border-radius: 50%;
+  background: #38afe5 url("../img/arrow-up.png") 50% 50% no-repeat;
+}
 
 /* FOOTER */
 footer > div:first-child {
   display: flex;
-  padding: 12px 40px 12px;
+  padding: 25px 40px;
   align-items: center;
   justify-content: space-around;
   background: #30455b;
@@ -127,20 +253,20 @@ footer div.nav {
 
 footer div.nav a {
   color: #fff;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 400;
-  margin: 2px 0;
+  margin: 4px 0;
 }
 
-footer div.nav p {
+footer div.nav span {
   color: #fff;
-  font-size: 16px;
+  font-size: 17px;
   font-weight: 400;
   margin: 0 0 0px;
 }
 
 footer div.contacts a {
-  font-size: 14px;
+  font-size: 15px;
 }
 
 footer div.contacts a:last-child {
@@ -157,7 +283,7 @@ footer div.social {
 footer div.social a {
   width: 40px;
   height: 40px;
-  margin: 10px 5px;
+  margin: 10px 5px 25px;
   border-radius: 50%;
 }
 
